# folio

./: .gitignore  Cargo.toml  installer.iss
.github/workflows/: build.yml
src/: anchor.rs  files_listing.rs  main.rs  page.rs  parser.rs  resource.rs
templates/: layout.html  main.html
