[package]
name = "folio"
description = "A simple image server packaged as a single binary for easy deployment"
version = "0.0.1"
edition = "2024"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.11.0"
askama = "0.14.0"
askama_web = { version = "0.14.6", features = ["actix-web-4"] }
clap = { version = "4.5.45", features = ["cargo", "derive", "string"] }
env_logger = "0.11.8"
image = "0.25.6"
urlencoding = "2.1.3"
